Bug 480659 - Icons in browse view overlapping
Summary: Icons in browse view overlapping
Status: RESOLVED FIXED
Alias: None
Product: gwenview
Classification: Applications
Component: general (other bugs)
Version First Reported In: 24.01.95
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Gwenview Bugs
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2024-02-01 06:50 UTC by Doug
Modified: 2024-02-13 15:14 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 24.02
Sentry Crash Report:


Attachments
Icons overlapping (156.25 KB, image/png)
2024-02-01 06:50 UTC, Doug
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Doug 2024-02-01 06:50:48 UTC
Created attachment 165427 [details]
Icons overlapping

SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***


STEPS TO REPRODUCE
1. Use Gwenview to browse a few files and folders and close
2. Reopen Gwenview

OBSERVED RESULT
Icons in browser view overlap

EXPECTED RESULT
icons do not overlap

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: KDE Neon Testing
(available in About System)
KDE Plasma Version: 5.93.0
KDE Frameworks Version: 5.249.0
Qt Version: 6.6.1

ADDITIONAL INFORMATION
Comment 1 Nate Graham 2024-02-01 19:37:32 UTC
Are you by any chance using a fractional scale factor?

Could you maybe write more detailed steps to reproduce?
Comment 2 Doug 2024-02-02 04:28:29 UTC
(In reply to Nate Graham from comment #1)
> Are you by any chance using a fractional scale factor?
> 
> Could you maybe write more detailed steps to reproduce?

Yes, I was on 150%.  The bug does not appear on 100 or 200%.

Steps:
1. Use Gwenview to view at least 2 images from at least 2 folders.
2. Close Gwenview
3. Set a fractional scaling factor on your display (this could also be done as step 1)
4. Reopen Gwenview, and make sure to select "Browse" from the toolbar
Comment 3 Nate Graham 2024-02-02 17:28:55 UTC
Can reproduce with a fractional scale factor.
Comment 4 David Edmundson 2024-02-13 10:42:30 UTC
Git commit 6d7767290dd2ecde7ff5f6482211b6edba3a040c by David Edmundson.
Committed on 13/02/2024 at 10:42.
Pushed by davidedmundson into branch 'master'.

Update on window scale changes

On wayland we get meaningful devicePixelRatio changed events on the
window not the screen.

Gwenview caches images and has some logic in device pixels that needs
evaluating whenever the DPR changes. This introduces a small helper than
lives on the active window and updates the thumbnail size appropriately.
FIXED-IN: 24.02

M  +60   -2    lib/thumbnailview/thumbnailview.cpp

https://invent.kde.org/graphics/gwenview/-/commit/6d7767290dd2ecde7ff5f6482211b6edba3a040c
Comment 5 David Edmundson 2024-02-13 15:14:19 UTC
Git commit 2c0d48c544a49378cd0a84443f466042cffea899 by David Edmundson.
Committed on 13/02/2024 at 15:09.
Pushed by davidedmundson into branch 'release/24.02'.

Update on window scale changes

On wayland we get meaningful devicePixelRatio changed events on the
window not the screen.

Gwenview caches images and has some logic in device pixels that needs
evaluating whenever the DPR changes. This introduces a small helper than
lives on the active window and updates the thumbnail size appropriately.
FIXED-IN: 24.02


(cherry picked from commit 6d7767290dd2ecde7ff5f6482211b6edba3a040c)

M  +60   -2    lib/thumbnailview/thumbnailview.cpp

https://invent.kde.org/graphics/gwenview/-/commit/2c0d48c544a49378cd0a84443f466042cffea899