Update on window scale changes

On wayland we get meaningful devicePixelRatio changed events on the
window not the screen.

Gwenview caches images and has some logic in device pixels that needs
evaluating whenever the DPR changes. This introduces a small helper than
lives on the active window and updates the thumbnail size appropriately.

BUG: 480659
FIXED-IN: 24.02


(cherry picked from commit 6d7767290dd2ecde7ff5f6482211b6edba3a040c)